updated h1 bug on mobile

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,198 +1,205 @@
 /* ------------------ BASE STYLES ------------------ */
+
 @font-face {
-	font-family: nav_font;
-	src: url('../fonts/Shorelines.otf');
+  font-family: nav_font;
+  src: url('../fonts/Shorelines.otf');
 }
 
 html {
-    height: 100%;
-    width: 100%;
-    background-color: none;
+  height: 100%;
+  width: 100%;
+  background-color: none;
 }
 
-.bio{
-    max-width: 75%;
-    font-size: 16px;
-    margin-left: 12%;
-    margin-top: 10px;
+.bio {
+  max-width: 75%;
+  font-size: 16px;
+  margin-left: 12%;
+  margin-top: 10px;
 }
 
-body{
-		margin-top: 30px;
+body {
+  margin-top: 30px;
 }
+
 
 /* --------------------- */
+
+
 /* NAVIGATION BAR
 /* --------------------- */
 
 .navbar-brand {
-    padding: 10px 15px;
+  padding: 10px 15px;
 }
 
 .navbar-brand img {
-    width: auto;
-    height: auto;
+  width: auto;
+  height: auto;
 }
 
-.navbar,
-.navbar.navbar-light {
-    -moz-transition-property: all;
-    -o-transition-property: all;
-    -webkit-transition-property: all;
-    transition-property: all;
-    -moz-transition-duration: 0.2s;
-    -o-transition-duration: 0.2s;
-    -webkit-transition-duration: 0.2s;
-    transition-duration: 0.2s;
-    -moz-transition-timing-function: linear;
-    -o-transition-timing-function: linear;
-    -webkit-transition-timing-function: linear;
-    transition-timing-function: linear;
-    -webkit-transform: translateZ(0);
+.navbar, .navbar.navbar-light {
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -moz-transition-timing-function: linear;
+  -o-transition-timing-function: linear;
+  -webkit-transition-timing-function: linear;
+  transition-timing-function: linear;
+  -webkit-transform: translateZ(0);
 }
 
-.nav > li > a:focus {
-    background-color: transparent;
-    outline: none;
+.nav>li>a:focus {
+  background-color: transparent;
+  outline: none;
 }
 
 .navbar-nav {
-    padding: 10px 0;
+  padding: 10px 0;
 }
 
-.navbar-nav > li {
-    margin: 0 10px;
+.navbar-nav>li {
+  margin: 0 10px;
 }
 
-.navbar-nav > li > a {
-    -moz-transition-property: all;
-    -o-transition-property: all;
-    -webkit-transition-property: all;
-    transition-property: all;
-    -moz-transition-duration: 0.1s;
-    -o-transition-duration: 0.1s;
-    -webkit-transition-duration: 0.1s;
-    transition-duration: 0.1s;
-    -moz-transition-timing-function: ease-out;
-    -o-transition-timing-function: ease-out;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
-    padding-left: 3px;
-    padding-right: 3px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-bottom: 2px solid transparent;
-    font-size: 12px;
-    color: #646464;
-    font-weight: 700;
-    /*font-family: nav_font;*/
+.navbar-nav>li>a {
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.1s;
+  -o-transition-duration: 0.1s;
+  -webkit-transition-duration: 0.1s;
+  transition-duration: 0.1s;
+  -moz-transition-timing-function: ease-out;
+  -o-transition-timing-function: ease-out;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+  padding-left: 3px;
+  padding-right: 3px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-bottom: 2px solid transparent;
+  font-size: 12px;
+  color: #646464;
+  font-weight: 700;
+  /*font-family: nav_font;*/
 }
 
-.navbar-nav > li > a:hover {
-    border-bottom: 2px solid #646464;
-    padding-bottom: 0;
-    background-color: transparent;
+.navbar-nav>li>a:hover {
+  border-bottom: 2px solid #646464;
+  padding-bottom: 0;
+  background-color: transparent;
 }
 
-.navbar-nav > li.active > a {
-    border-bottom: 2px solid #646464;
-    padding-bottom: 0;
-    background-color: transparent;
-    outline: none;
+.navbar-nav>li.active>a {
+  border-bottom: 2px solid #646464;
+  padding-bottom: 0;
+  background-color: transparent;
+  outline: none;
 }
 
-.navbar-nav.nav-text-light > li > a {
-    color: white;
+.navbar-nav.nav-text-light>li>a {
+  color: white;
 }
 
-.navbar-nav.nav-text-light > li > a:hover {
-    border-bottom-color: white;
+.navbar-nav.nav-text-light>li>a:hover {
+  border-bottom-color: white;
 }
 
-.navbar-nav.nav-text-light > li.active > a {
-    border-bottom-color: white;
+.navbar-nav.nav-text-light>li.active>a {
+  border-bottom-color: white;
 }
 
 .navbar {
-    -moz-border-radius: 0;
-    -webkit-border-radius: 0;
-    border-radius: 0;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
 }
 
 .navbar.navbar-light {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #eee;
+  background-color: #f7f7f7;
+  border-bottom: 1px solid #eee;
 }
 
-.navbar.navbar-light .navbar-nav.nav-text-light > li > a {
-    color: #646464;
+.navbar.navbar-light .navbar-nav.nav-text-light>li>a {
+  color: #646464;
 }
 
 @media screen and (max-width: 767px) {
-    .navbar.navbar-light .navbar-nav.nav-text-light > li > a {
-        color: #e6e6e6;
-        border-bottom: none;
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }
-    .navbar.navbar-light .navbar-nav.nav-text-light > li > a:hover {
-        color: #fff;
-        padding-top: 15px;
-        padding-bottom: 15px;
-        text-decoration: underline;
-    }
+  .navbar.navbar-light .navbar-nav.nav-text-light>li>a {
+    color: #e6e6e6;
+    border-bottom: none;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .navbar.navbar-light .navbar-nav.nav-text-light>li>a:hover {
+    color: #fff;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-decoration: underline;
+  }
 }
 
-.navbar.navbar-light .navbar-nav.nav-text-light > li > a:hover {
-    border-bottom-color: pink;
+.navbar.navbar-light .navbar-nav.nav-text-light>li>a:hover {
+  border-bottom-color: pink;
 }
 
-.navbar.navbar-light .navbar-nav.nav-text-light > li.active > a {
-    border-bottom-color: pink;
+.navbar.navbar-light .navbar-nav.nav-text-light>li.active>a {
+  border-bottom-color: pink;
 }
 
 .navbar-toggle {
-    background-color: black;
+  background-color: black;
 }
 
 .navbar-toggle .icon-bar {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 @media screen and (max-width: 767px) {
-    .navbar-collapse {
-        background-color: black;
-    }
-		#logo{
-			display: none;
-		}
+  .navbar-collapse {
+    background-color: black;
+  }
+  #logo {
+    display: none;
+  }
+  h1 {
+    font-size: 32px;
+  }
 }
 
 
 /* --------------------- */
+
+
 /* Sliders (not homepage)
 /* --------------------- */
 
 .content-section-b {
-    padding: 100px 0;
-    background-color: white;
-    /*background-image: url();*/
+  padding: 100px 0;
+  background-color: white;
+  /*background-image: url();*/
 }
 
 .carousel-control.left {
-    background-image: none;
+  background-image: none;
 }
 
 .carousel-control.right {
-    background-image: none;
+  background-image: none;
 }
 
-.carousel-inner > .item > a > img,
-.carousel-inner > .item > img {
-    display: inline-block;
-    margin: 0 auto;
+.carousel-inner>.item>a>img, .carousel-inner>.item>img {
+  display: inline-block;
+  margin: 0 auto;
 }
 
 .img-responsive {
-    margin: 0 auto;
+  margin: 0 auto;
 }
